# asimov_estudos

Trilhas/Agentes_Crewai/Criando_agents_crewai/: .gitignore  Notações.txt  requirements.txt
Trilhas/Agentes_Crewai/Criando_agents_crewai/create_crews/: README.md  pyproject.toml
Trilhas/Agentes_Crewai/Criando_agents_crewai/create_crews/src/create_crews/: crew.py  main.py
Trilhas/Agentes_Crewai/Criando_agents_crewai/scripts/: 01_blog_post_crew.ipynb
Trilhas/Agentes_Crewai/EngenhariaPrompts/apostilas_em_markdown/: 01. Introdução ao Curso.md  02. Conceitos Gerais de LLMs.md  03. Os princípios de um bom prompt.md  04. Criando prompts claros e específicos.md  05. Elementos de um Prompt.md  06. Público, persona e exemplo.md  07. Delimitadores e Saídas Estruturadas.md  08. Zero, One e Few-Shot.md  09. Dando tempo para o modelo pensar (COT).md  10. Encadeamento (Chaining).md  11. Resumo e Extração,.md  12. Inferência e Análise de Sentimento.md  13. Transformando, traduzindo e modificando.md  14. Criação de Chatbots Personalizados.md  15. Recursos adicionais.md
