[project]
name = "create_crews"
version = "0.1.0"
description = "create_crews using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
create_crews = "create_crews.main:run"
run_crew = "create_crews.main:run"
train = "create_crews.main:train"
replay = "create_crews.main:replay"
test = "create_crews.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
